--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.2.5",
     "postgres": "^3.4.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sonner": "^1.5.0"
   },
   "devDependencies": {
     "eslint": "^8",
