--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lucia-auth/adapter-postgresql": "^3.1.2",
     "cloudinary": "^2.4.0",
+    "lucia": "^3.2.0",
     "next": "14.2.5",
     "postgres": "^3.4.4",
     "react": "^18",
