--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
-    "sonner": "^1.5.0"
+    "sonner": "^1.5.0",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "eslint": "^8",
